# lisprust

./: Cargo.toml  README.md  benchmark.scm  database.lisp  deriv.scm  deriv_new.scm  deriv_standalone.scm  float_benchmark.scm  mutual_recursion.scm
src/: expr_interpreter.rs  instructions.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/debug_adapter/: adapter.rs  mod.rs  protocol.rs
src/vm/: compiler.rs  gc.rs  jit.rs  list_functions.rs  math_functions.rs  misc_functions.rs  mod.rs  profiler.rs  tagged_value.rs  vm.rs  vp.rs  vp.rs.fragment
src/vm/compiler/: bytecode_builder.rs  compiler.rs  function_manager.rs  mod.rs  scope_manager.rs
src/vm/compiler/ops/: bindings.rs  control.rs  functions.rs  list.rs  logic.rs  math.rs  mod.rs
src/vm/jit/: analysis.rs  jit_types.rs  vm_helpers.rs  vm_helpers_ext.rs
tests/: basic_tests.rs  closure_tests.rs  cyclic_tests.rs  debug_tests.rs  intrinsic_wrapper_tests.rs  list_tests.rs  math_tests.rs  quote_tests.rs  shadowing_tests.rs
tests/common/: mod.rs
vscode-extension/: README.md  language-configuration.json  package-lock.json  package.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: lisp.tmLanguage.json
