[package]
name = "lisp"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
case_insensitive_hashmap = "1.0.0"
enum-display = "0.1.3"
logos = "0.13.0"
mimalloc = { version = "*", default-features = false }
unicase = "2.7.0"
derive_more = { version = "1", features = ["from"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
anyhow = "1.0.100"
gc = "0.4"
gc_derive = "0.4"
cranelift = "0.120.2"
cranelift-jit = "0.120.2"
cranelift-module = "0.120.2"
cranelift-native = "0.120.2"
iced-x86 = "1.21.0"
rustc-hash = "2.1.1"
